--- a/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
+++ b/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
@@ -36,7 +36,7 @@
 	};
 	
 	ramoops_mem: ramoops_mem_region {
-		no-map;
+		//no-map;
 		compatible = "ramoops";
 		reg = <0x0 0xef000000 0x0 0xC0000>;
 		console-size = <0x40000>;
