--- a/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
+++ b/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
@@ -16,9 +16,9 @@
   qcom,board-id = <0x41 0xb1a0 0x42 0xb1a0>, <0x43 0xc100>, <0x42 0xb1b0>, <0x43 0xc200 0x44 0xc200>, <0x42 0xb200 0x43 0xb200>;
   
   // TODO: is this alias necessary?
-  aliases {
-  	panel = &panel;
-  };
+  //aliases {
+  //	panel = &panel;
+  //};
   
   // TODO: add led first
   //backlight: backlight {
