--- a/arch/arm64/boot/dts/qcom/pm8953.dtsi
+++ b/arch/arm64/boot/dts/qcom/pm8953.dtsi
@@ -176,4 +176,11 @@
 			#sound-dai-cells = <1>;
 		};
 	};
+	
+	pmic@2 {
+		mpps@a000 {
+			reg = <0xa000 0x100>;
+			status = "disabled";
+		};
+	};
 };
