--- a/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
+++ b/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
@@ -71,7 +71,7 @@
 
 	touchscreen@38 {
 		reg = <0x38>; // downstream
-		compatible = "focaltech,mmi";
+		compatible = "edt,edt-ft5406", "edt,edt-ft5x06"; // actually this touchscreen is the ft5546, but close enough I guess
 		interrupts-parent = <&msmgpio>; // downstream
 		interrupts-extended = <&msmgpio 65 0x2002>; // downstream
 
@@ -86,6 +86,8 @@
 		pinctrl-names = "default"; // TODO: idk what to put here.
 		pinctrl-0 = <0xe3 0xe4>;
 		pinctrl-1 = <0xe5 0xe6>;
+		touchscreen-size-x = <1080>;
+		touchscreen-size-y = <2280>;
 	};
 };
 
