--- a/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
+++ b/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
@@ -70,7 +70,7 @@
 	status = "okay";
 
 	focaltech@38 {
-		compatible = "edt,edt-ft5406", "edt,edt-ft5x06";
+		compatible = "edt,edt-ft5406", "edt,edt-ft5x06"; // the touchscreen is actually ft5446, but the ft5406 driver works.
 		reg = <0x38>;
 		interrupt-parent = <&msmgpio>;
 		interrupts = <65 IRQ_TYPE_EDGE_FALLING>;
@@ -87,7 +87,7 @@
 		// pinctrl-2 = <&ts_release>;
 
 		touchscreen-size-x = <1080>;
-		touchscreen-size-y = <2280>;
+		touchscreen-size-y = <2160>;
 	};
 };
 
