--- a/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
+++ b/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
@@ -15,7 +15,6 @@
   qcom,msm-id = <338 0>;
   qcom,board-id = <0x41 0xb1a0 0x42 0xb1a0>, <0x43 0xc100>, <0x42 0xb1b0>, <0x43 0xc200 0x44 0xc200>, <0x42 0xb200 0x43 0xb200>;
   
-  // TODO: is this alias necessary?
   aliases {
   	panel = &panel;
   };
@@ -29,14 +28,13 @@
 		reg = <0x0 0x84300000 0x0 0x2000000>;
 	};
 	
-	ramoops_mem: ramoops_mem_region {
+	/*ramoops_mem: ramoops_mem_region {
 		no-map;
 		compatible = "ramoops";
 		reg = <0x0 0xef000000 0x0 0xC0000>;
 		console-size = <0x40000>;
-	};
+	};*/
 	
-	// NOTE: importantly, when the device was bootlooping, this node was here before, but didn't have the @eefe4000. same for wdog_cpuctx_region@eefe6000.
 	tzlog_bck_region@eefe4000 {
 		no-map;
 		reg = <0x0 0xeefe4000 0x0 0x2000>;
