--- a/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
+++ b/arch/arm64/boot/dts/qcom/sdm450-motorola-ali.dts
@@ -89,6 +89,12 @@
 	};
 };
 
+&i2c_5 {
+	nfc@28 {
+		// TODO: fill this in
+	};
+};
+
 &atc_leds {
 	status = "okay";
 };
@@ -136,6 +142,15 @@
 &dsi0_out {
 	data-lanes = <0 1 2 3>;
 	remote-endpoint = <&panel_in>;
+};
+
+&wcd_codec {
+	qcom,micbias1-ext-cap;
+	qcom,hphl-jack-type-normally-open;
+	
+	// I couldn't verify these two downstream:
+	//qcom,mbhc-vthreshold-low = <75 150 237 450 500>;
+	//qcom,mbhc-vthreshold-high = <75 150 237 450 500>;
 };
 
 &camss {
